update on wedme

--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wedme</title>
+    <title>WED BY DEBS</title>
     <link rel="stylesheet" href="styles.css" />
+    
   </head>
   <body>
-    <div id="head">
-      <h1>A wedding day is a memorable day</h1>
+    <nav>
+      <h4 id="head">wedding</h4>
+      <div class="nav items">
+        <a class="color" href="#">HOME</a>
+        <a class="color" href="#">OUR STORIES</a>
+        <a class="color" href="#">THEIR WEDDING</a>
+        <a class="color" href="#">GALLERY</a>
+        <a class="color" href="#">RSVP</a>
+      </div>
+    </nav>
+    <section id="hero_img">
+      <div class="hero_items">
+      <p>icon</p>
+      <p>23 DECEMBER 2024</p>
+      <p>Save The Date</p> 
+      <p>Agnes & David</p>
     </div>
+    </section>
+     <section id="bg_2">
+      <h3 id="story">
+        our story
+      </h3>
+      <p id="story2">Every bride and groom wants an incomparable wedding combined with fantasy and style. We create stunning, one-of-a-kind events produced and styled to perfection. From traditional to modern, elegant and relaxed, we focus on any event we plan.</p>
+     </section>
+     <section>
+      <div id="gallery"></div>
+        <div class="gallery-item">
+          <img src="/image/image2.png"
+       class="gallery-item">
+          <img src="/image/image3.png"
+      class="gallery-item">
+          <img src="/image/image4.png"
+      class="gallery-item">
+          <img src="/image/image1.png"
+     </section>
+   
   </body>
 </html>
