update on inspo

--- a/index.html
+++ b/index.html
@@ -19,29 +19,92 @@
     </nav>
     <section id="hero_img">
       <div class="hero_items">
-        <p>icon</p>
-        <p>23 DECEMBER 2024</p>
-        <p>Save The Date</p>
-        <p>Agnes & David</p>
+        <h2>Made With LOVE</h3>
+        <h2>23 DECEMBER 2024</h3>
+        <h3>Save The Date</h3>
+        <h2>Agnes & David</h2>
       </div>
-    </section>
-    <section id="bg_2">
-      <h3 id="story">our story</h3>
-      <p id="story2">
-        Every bride and groom wants an incomparable wedding combined with
-        fantasy and style. We create stunning, one-of-a-kind events produced and
-        styled to perfection. From traditional to modern, elegant and relaxed,
-        we focus on any event we plan.
-      </p>
     </section>
     <section>
-      <div id="gallery"></div>
-      <div class="gallery-item">
-        <img src="./image//image2.png" class="gallery-item" />
-        <img src="./image//image3.png" class="gallery-item" />
-        <img src="./image//image4.png" class="gallery-item" />
-        <img src="./image//image1.png" class="gallery-item" />
+      <div id="bg_2">
+        <h3 class="story gall">our story</h3>
+        <p id="story2">
+          Every bride and groom wants an incomparable wedding combined with
+          fantasy and style. <br>We create stunning, one-of-a-kind events produced
+          and styled to perfection. From traditional to modern, elegant and
+          relaxed, we focus on any event we plan.
+        </p>
+      </div>
+      <div class="dinner gal bg3">
+        <div>
+          <p class="underline">Don't miss it!</p>
+        </div>
+        <div>
+          <br /><br /><br /><br /><br />
+          <p>Remember To Come With A Gift</p>
+        </div>
       </div>
     </section>
+    <section>Wedding Details</section>
+
+    <section class="bg3">
+      <div>
+        <h3 class="gall ">Wedding & Ceremonies</h3>
+      </div>
+      <div >
+        <p id="cere-feat">
+          We assist our clients in creating memorable, magical celebrations that
+          exceed expectations. Our personal approach ensures the weddings we
+          plan are meaningful and truly reflect our clients as individuals, as
+          couples, and states something about their shared values and sense of
+          style.
+        </p>
+      </div>
+      <div>
+        <button>learn more</button>
+      </div>
+    </section>
+    <section id="our-gall">
+      <div class="gall underline">Our Gallery</div>
+      <div id="gallery">
+        <div class="gallery-item">
+          <img src="./image/image1.png" alt="bouquet" />
+        </div>
+        <div class="gallery-item">
+          <img src="./image/image2.png" alt="couple" />
+        </div>
+        <div class="gallery-item">
+          <img src="./image/image3.png" alt="hands" />
+        </div>
+        <div class="gallery-item">
+          <img src="./image/image4.png" alt="groom" />
+        </div>
+        <div class="gallery-item">
+          <img src="./image/image5.png" alt="ring" />
+        </div>
+        <div class="gallery-item">
+          <img src="./image/image1.png" alt="cake" />
+        </div>
+        <div class="view view-overlay">
+          <p>VIEW ALL GALLERY</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="pre-footer border">
+      <div>
+        <h2 class="gall">Contact Us</h2>
+      </div>
+      <div>
+        <p>On 23rd December 2024 Join us as we celebrate life and love.</p>
+      </div>
+      <div>
+        <h4>057-127-0912</h4>
+      </div>
+      <div>
+        <p>14 Endive street, Ashongman Estate, Accra-Ghana</p>
+      </div>
+    </section>
+    <footer>footer here</footer>
   </body>
 </html>
