--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WED BY DEBS</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -55,7 +59,7 @@
         <div class="rib">
           <h1>🎀</h1>
         </div>
-        <h3 class="Date text-2xl">Save The Date </h2>
+        <h3 class="Date text-2xl">Save The Date</h3>
         <h3 class="Date">23 DECEMBER 2024</h3>
         <h2 class="coup">Mic <span class="love">❤ </span>Barbs</h2>
       </div>
@@ -73,24 +77,66 @@
       </div>
     </section>
 
-
-      <section class="prep">
-<div>
-
-</div>
-
-
-      </section>
-      <div class="dinner gal bg3">
-        <div>
-          <p class="line">Don't miss it!</p>
-          <p id="rem">Remember To Come With A Gift</p>
+    <section class="prep">
+      <div class="emp">
+        <h1>Don't miss it</h1>
+      </div>
+      <div class="countdown">
+        <div class="time">
+          <p class="fig">15</p>
+          <p class="word">days</p>
+        </div>
+        <div class="time">
+          <p class="fig">23</p>
+          <p class="word">hours</p>
+        </div>
+        <div class="time">
+          <p class="fig">06</p>
+          <p class="word">minutes</p>
+        </div>
+        <div class="time">
+          <p class="fig">20</p>
+          <p class="word">seconds</p>
         </div>
       </div>
     </section>
+
     <section>
-      <h3 class="gall">Wedding Details</h3>
+      <h1 class="annoc">Wedding Details</h1>
+    <div class="detail">
+      <div class="card">
+        <div class="card-items1">
+          <div>
+            <h2 class="icon"><i class="fa fa-glass" aria-hidden="true"></i></h2>
+          </div>
+          <h1>TOAST & DINNER</h1>
+          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+        </div>
+        <div class="card-items2">
+          <div>
+            <h2 class="icon"><i class="fa fa-home" aria-hidden="true"></i></h2>
+          </div>
+          <h1>CEREMONY</h1>
+          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+        </div>
+        <div class="card-items3">
+          <div>
+            <h2 class="icon"><i class="fa fa-birthday-cake" aria-hidden="true"></i></h2>
+          </div>
+          <h1>WEDDING CAKE</h1>
+          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+        </div>
+        <div class="card-items4">
+          <div>
+            <h2 class="icon"><i class="fa fa-camera-retro" aria-hidden="true"></i></h2>
+          </div>
+          <h1>PHOTOGRAPHY</h1>
+          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+        </div>
+      </div>
+    </div>
     </section>
+
     <section class="bg3">
       <div class="wed-sec">
         <h3 id="wed">Wedding & Ceremonies</h3>
