update on second project

--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WED BY DEBS</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <nav class="nav-bar">
-      <div class="brand">Deb's BBl</div>
-      <ul class="nav-items">
-        <li><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a href="">Our Story ▼</a>
-          <ul class="dropdown-items">
-            <li><a href="#">Features</a></li>
-            <li><a href="#">About</a></li>
-            <li class="dropdown">
-              <a href="#">Categories ▼</a>
-              <ul>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Categories</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="#">Their Wedding</a></li>
-        <li><a href="">Gallery</a></li>
-        <li><a href="#">RSVP</a></li>
-      </ul>
-    </nav>
 
-    <!-- <nav class="nav-bar">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WED BY DEBS</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+  <nav class="nav-bar">
+    <div class="brand bbl">Deb's BBl</div>
+    <ul class="nav-items">
+      <li><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a href="">Our Story ▼</a>
+        <ul class="dropdown-items">
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About</a></li>
+          <li class="dropdown">
+            <a href="#">Categories ▼</a>
+            <ul>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Categories</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#">Their Wedding</a></li>
+      <li><a href="">Gallery</a></li>
+      <li><a href="#">RSVP</a></li>
+    </ul>
+  </nav>
+
+  <!-- <nav class="nav-bar">
       <div class="brand">Deb's BBL</div>
       <div class="nav-items">
         <a href="#">HOME</a>
@@ -54,137 +53,250 @@
       </div>
     </nav> -->
 
-    <hero class="hero hero-overlay">
-      <div class="hero_items">
-        <div class="rib">
-          <h1>🎀</h1>
-        </div>
-        <h3 class="Date text-2xl">Save The Date</h3>
-        <h3 class="Date">23 DECEMBER 2024</h3>
-        <h2 class="coup">Mic <span class="love">❤ </span>Barbs</h2>
+  <hero class="hero">
+    <div class="hero_items">
+      <div class="rib">
+        <h1>🎀</h1>
       </div>
-    </hero>
+      <h3 class="Date text-2xl">Save The Date</h3>
+      <h3 class="Date">23 DECEMBER 2024</h3>
+      <h2 class="coup">Mic <span class="love">❤ </span>Barbs</h2>
+    </div>
+  </hero>
 
-    <section>
-      <div id="bg_2">
-        <h3 class="story gall">our story</h3>
-        <p id="story2">
-          Every bride and groom wants an incomparable wedding combined with
-          fantasy and style. <br />We create stunning, one-of-a-kind events
-          produced and styled to perfection. From traditional to modern, elegant
-          and relaxed, we focus on any event we plan.
-        </p>
-      </div>
-    </section>
+  <section>
+    <div id="bg_2">
+      <h3 class="story gall">our story</h3>
+      <p id="story2">
+        Every bride and groom wants an incomparable wedding combined with
+        fantasy and style. <br />We create stunning, one-of-a-kind events
+        produced and styled to perfection. From traditional to modern, elegant
+        and relaxed, we focus on any event we plan.
+      </p>
+    </div>
+  </section>
 
-    <section class="prep">
-      <div class="emp">
-        <h1>Don't miss it</h1>
+  <section class="prep">
+    <div class="emp">
+      <h1>Don't miss it</h1>
+    </div>
+    <div class="countdown">
+      <div class="time">
+        <p class="fig">15</p>
+        <p class="word">days</p>
       </div>
-      <div class="countdown">
-        <div class="time">
-          <p class="fig">15</p>
-          <p class="word">days</p>
-        </div>
-        <div class="time">
-          <p class="fig">23</p>
-          <p class="word">hours</p>
-        </div>
-        <div class="time">
-          <p class="fig">06</p>
-          <p class="word">minutes</p>
-        </div>
-        <div class="time">
-          <p class="fig">20</p>
-          <p class="word">seconds</p>
-        </div>
+      <div class="time">
+        <p class="fig">23</p>
+        <p class="word">hours</p>
       </div>
-    </section>
+      <div class="time">
+        <p class="fig">06</p>
+        <p class="word">minutes</p>
+      </div>
+      <div class="time">
+        <p class="fig">20</p>
+        <p class="word">seconds</p>
+      </div>
+    </div>
+  </section>
 
-    <section>
-      <h1 class="annoc">Wedding Details</h1>
+  <section>
+    <h1 class="annoc">Wedding Details</h1>
     <div class="detail">
       <div class="card">
         <div class="card-items1">
           <div>
-            <h2 class="icon"><i class="fa fa-glass" aria-hidden="true"></i></h2>
+            <h2 class="icon">
+              <i class="fa fa-glass" aria-hidden="true"></i>
+            </h2>
           </div>
-          <h1>TOAST & DINNER</h1>
-          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+          <h1 class="hh">TOAST & DINNER</h1>
+          <p>
+            Look at the most passionate ceremony ever. <br />We wish happiness
+            to the wedding couple.
+          </p>
         </div>
         <div class="card-items2">
           <div>
-            <h2 class="icon"><i class="fa fa-home" aria-hidden="true"></i></h2>
+            <h2 class="icon">
+              <i class="fa fa-home" aria-hidden="true"></i>
+            </h2>
           </div>
-          <h1>CEREMONY</h1>
-          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+          <h1 class="hh">CEREMONY</h1>
+          <p>
+            Look at the most passionate ceremony ever. <br />We wish happiness
+            to the wedding couple.
+          </p>
         </div>
         <div class="card-items3">
           <div>
-            <h2 class="icon"><i class="fa fa-birthday-cake" aria-hidden="true"></i></h2>
+            <h2 class="icon">
+              <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+            </h2>
           </div>
-          <h1>WEDDING CAKE</h1>
-          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+          <h1 class="hh">WEDDING CAKE</h1>
+          <p>
+            Look at the most passionate ceremony ever. <br />We wish happiness
+            to the wedding couple.
+          </p>
         </div>
         <div class="card-items4">
           <div>
-            <h2 class="icon"><i class="fa fa-camera-retro" aria-hidden="true"></i></h2>
+            <h2 class="icon">
+              <i class="fa fa-camera-retro" aria-hidden="true"></i>
+            </h2>
           </div>
-          <h1>PHOTOGRAPHY</h1>
-          <p>Look at the most passionate ceremony ever. <br>We wish happiness to the wedding couple.</p>
+          <h1 class="hh">PHOTOGRAPHY</h1>
+          <p>
+            Look at the most passionate ceremony ever. <br />We wish happiness
+            to the wedding couple.
+          </p>
         </div>
       </div>
     </div>
-    </section>
+  </section>
 
-    <section class="bg3">
-      <div class="wed-sec">
-        <h3 id="wed">Wedding & Ceremonies</h3>
-        <p class="w-[60%]">
-          We assist our clients in creating memorable, magical celebrations that
-          exceed expectations. Our personal approach ensures the weddings we
-          plan are meaningful and truly reflect our clients as individuals, as
-          couples, and states something about their shared values and sense of
-          style.
-        </p>
-        <button class="btn">learn more</button>
-      </div>
-    </section>
-    <section id="our-gall">
-      <div class="gall underline">Our Gallery</div>
-      <div id="gallery">
-        <div class="gallery-item">
-          <img src="./image/image1.png" alt="bouquet" />
-        </div>
-        <div class="gallery-item">
-          <img src="./image/image2.png" alt="couple" />
-        </div>
-        <div class="gallery-item">
-          <img src="./image/image3.png" alt="hands" />
-        </div>
-        <div class="gallery-item">
-          <img src="./image/image4.png" alt="groom" />
-        </div>
-        <div class="gallery-item">
-          <img src="./image/image5.png" alt="ring" />
-        </div>
-        <div class="gallery-item">
-          <img src="./image/image1.png" alt="cake" />
-        </div>
-        <div class="border-2 border-orange-600 content">
-          <p>VIEW ALL GALLERY</p>
-        </div>
-      </div>
-    </section>
+  <section>
+    <div class="wed-sec">
+      <h3 class="gall">Wedding & Ceremonies</h3>
+      <p class="w-[60%]">
+        We assist our clients in creating memorable, magical celebrations that
+        exceed expectations. Our personal approach ensures the weddings we
+        plan are meaningful and truly reflect our clients as individuals, as
+        couples, and states something about their shared values and sense of
+        style.
+      </p>
+      <button class="btn">learn more</button>
+    </div>
+  </section>
 
-    <section class="pre-footer border text-center">
+  <section>
+    <h1 class="gall gal">Our Gallery</h1>
+    <div class="gallery">
       <div>
-        <h2 class="gall">Contact Us</h2>
-        <p>Join us on 23rd December 2024 as we celebrate life and love.</p>
-        <h4 class="text-xl italic text-center font-semibold">057-127-0912</h4>
-        <p>14 Endive street, Ashongman Estate, Accra-Ghana</p>
+        <img src="./image/swer.jpg" alt="" class="photo" />
+        <title>bridal shower</title>
       </div>
-    </section>
-    <footer>footer here</footer>
-  </body>
+      <div>
+        <img src="./image/gifts.jpg" alt="" class="photo" />
+        <title>dowry</title>
+      </div>
+      <div>
+        <img src="./image/wrp.jpg" alt="" class="photo" />
+        <title>dowry</title>
+      </div>
+      <div>
+        <img src="./image/decor.jpg" alt="" class="photo" />
+        <title>decor</title>
+      </div>
+      <div>
+        <img src="./image/brid6.jpg" alt="" class="photo" />
+        <title>traditional</title>
+      </div>
+      <div>
+        <img src="./image/tra.jpg" alt="" class="photo" />
+        <title>traditional</title>
+      </div>
+      <div>
+        <img src="./image/traditional.jpeg" alt="" class="photo" />
+        <title>traditional</title>
+      </div>
+      <div>
+        <img src="./image/bride5.jpg" alt="" class="photo" />
+        <title>civil</title>
+      </div>
+      <div>
+        <img src="./image/we.jpg" alt="" class="photo" />
+        <title>wed couple</title>
+      </div>
+      <div>
+        <img src="./image/Screenshot_20240915-223803.jpg" alt="" class="photo" />
+        <title>wedding</title>
+      </div>
+      <div>
+        <img src="./image/recpt.jpg" alt="" class="photo" />
+        <title>reception</title>
+      </div>
+      <div>
+        <img src="./image/kenc.png" alt="" class="photo" />
+        <p><title>reception</title></p>
+      </div>
+      <button class="view-btn">VIEW ALL GALLERY</button>
+      <p ></p>
+    </div>
+  </section>
+
+  <!-- <section id="our-gall">
+    <div class="gall underline">Our Gallery</div>
+    <div id="gallery">
+      <div class="gallery-item">
+        <img src="./image/image1.png" alt="bouquet" />
+      </div>
+      <div class="gallery-item">
+        <img src="./image/image2.png" alt="couple" />
+      </div>
+      <div class="gallery-item">
+        <img src="./image/image3.png" alt="hands" />
+      </div>
+      <div class="gallery-item">
+        <img src="./image/image4.png" alt="groom" />
+      </div>
+      <div class="gallery-item">
+        <img src="./image/image5.png" alt="ring" />
+      </div>
+      <div class="gallery-item">
+        <img src="./image/image1.png" alt="cake" />
+      </div> -->
+      <!-- <div class="border-2 border-orange-600 content">
+       
+      </div>
+    </div>
+  </section> -->
+
+  <section class="contact border text-center">
+    <div>
+      <h2 class="gall">Contact Us</h2>
+      <p>Join us on 23rd December 2024 as we celebrate life and love.</p>
+      <h4 class="text-xl italic text-center font-semibold">057-127-0912</h4>
+      <p>14 Endive street, Ashongman Estate, Accra-Ghana</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="bbl gall">
+      <h1>Deb's Bridal Bliss</h1>
+    </div>
+    <h1 class="text-2xl font-bold">RECEIVE NEWS IN YOUR EMAIL</h1>
+    <p class="text-2xl">
+      Join our mailing list to receive news and announcements
+    </p>
+    <p id="mail">
+    <form action="#" class="email">
+      <input type="email" placeholder="Enter Email" />
+      <button type="submit"><i class="fa fa-paper-plane"></i>
+      </button>
+    </form>
+    </p>
+    <p class="icon">
+      <i class="fa fa-home"></i>
+      <i class="fa fa-facebook"></i>
+      <i class="fa fa-instagram"></i>
+      <i class="fa fa-pinterest"></i>
+      <i class="fa fa-twitter"></i>
+      <i class="fa fa-tripadvisor"></i>
+    </p>
+    <h4 class="foot-nav">
+      <a href="#">Home</a>
+      <a href="#">Our Stories</a>
+      <a href="#">Contact</a>
+      <a href="#">Gallery</a>
+      <a href="#">The wedding</a>
+    </h4>
+    <h4 class="Copyright">
+      Copyright ©2024 All rights reserved | This template is made with <i class="fa fa-heart "></i>
+      <span>by Debbie</span>
+    </h4>
+  </footer>
+</body>
+
 </html>
